--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -115,7 +115,9 @@ main {
     grid-area: main;
     background-color: #f5e1ee;
 }
-
+.descripcion_seccion p{
+font-size: larger;
+}
 .cards-container {
     display: flex;
     flex-wrap: wrap;
@@ -124,16 +126,19 @@ main {
     gap: 10%;
 }
 
+
 .title-container {
     color: #860755;
     padding: 0 30px;
 }
 
 .card {
-    width: 18rem;
+    width: 32rem;
     margin-bottom: 20px;
 }
-
+.card p{
+    font-size: large;
+}
 .servicios {
     display: flex;
     flex-wrap: wrap;
@@ -143,26 +148,16 @@ main {
 }
 
 .servicios .card {
-    width: 16rem;
+    width: 32rem;
 }
 
 .custom-card {
     width: 18px*0.5vw;
     margin: 10px auto;
-    transition: transform 0.3s ease;
 }
-
-.custom-card:hover {
-    transition: transform 0.3s ease;
-}
-
-.custom-card:hover:hover {
-    transform: scale(1.2);
-}
-
 
 .custom-img {
-    height: 200px;
+    height: 500px;
     object-fit: cover;
 }
 
@@ -198,9 +193,11 @@ ul {
     color: #860755;
     font-style: italic;
     background-color: rgba(248, 180, 222, 0.5);
-
     margin: 0 30px;
     padding: 10px;
+}
+iframe{
+    margin: 20px;
 }
 
 footer {
@@ -225,7 +222,7 @@ footer h4 {
 .rrss_container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: small;
     gap: 8px;
     padding: 0 30px;
@@ -242,6 +239,9 @@ footer h4 {
         grid-template-rows: auto auto auto auto;
         max-width: 100%;
     }
-
+    .cards-container {
+        padding: 0 5px;
+    }
+    
 
 }
